ProjetCompil/Verif/Test/success/arbreEnrichi.cas
-- Exemple de programme JCas de arbre enrichi
program
T : array[1 .. 5] of real ; 
begin
T[1] := 0 ; 
end.