ProjetCompil/Verif/Test/fail/typeNonCompatible4.cas
program
	D : boolean;
begin
	D := -D;
end.
	
